kubernetes/cluster/active/addons/istio/authservice/base/resources/destinationrule.yaml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: authservice
  namespace: istio-ingress
spec:
  host: authservice.authservice.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
